--- a/src/index.scss
+++ b/src/index.scss
@@ -1,12 +1,7 @@
-/*==================================== Google Font ==========================================*/
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@0,300;0,700;1,300&display=swap');
+/*==================================== DEFAULT STYLES RESET ==============================*/
 
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-}
-
-body {
-    font-family: 'Open Sans Condensed', sans-serif;
 }
