--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-/*==================================== DEFAULT STYLES RESET ==============================*/
+/*===================== Default Style Reset ========================*/
 
 * {
     padding: 0;
