--- a/src/Components/Header/styles.scss
+++ b/src/Components/Header/styles.scss
@@ -1,13 +1,12 @@
 .header {
   width: 100%;
-  height: 4.5rem;
+  height: 72px;
   display: flex;
   justify-content: space-between;
-  margin-bottom: 1.5rem;
+  margin-bottom: 24px;
 
   .logo-container {
-    width: 4.5rem;
-    height: 100%;
+    width: 72px;
   }
 
   .options {
@@ -18,7 +17,7 @@
     justify-content: flex-end;
 
     .option {
-      padding: 0.625rem 1rem;
+      padding: 10px 16px;
     }
   }
 }
