--- a/src/Components/SignIn/styles.scss
+++ b/src/Components/SignIn/styles.scss
@@ -1,9 +1,9 @@
 .sign-in {
-  width: 30vw;
+  width: 30%;
   display: flex;
   flex-direction: column;
 
   h2 {
-    margin: 0.625rem 0;
+    margin: 10px 0;
   }
 }
