--- a/src/Components/FormInput/styles.scss
+++ b/src/Components/FormInput/styles.scss
@@ -1,29 +1,32 @@
-/*============================== GLOBAL VARIABLES  ===========================*/
+/* global variables */
 $sub-color: #808080;
 $main-color: #000000;
 
 @mixin shrinkLabel {
-  top: -0.9rem;
+  top: -12px;
   font-size: 0.75rem;
   color: $main-color;
 }
 
 .group {
   position: relative;
-  margin: 3rem 0;
+  margin-top: 48px;
+  margin-bottom: 48px;
 
   .form-input {
+    border: none;
+    outline: none;
     background: none;
     background-color: #fff;
     color: $sub-color;
     font-size: 1.25rem;
-    padding: 0.625rem 0.625rem 0.625rem 0.35rem;
+    padding: 10px;
     display: block;
     width: 100%;
-    border: none;
     border-radius: 0;
     border-bottom: 1px solid $sub-color;
-    margin: 1.6rem 0;
+    margin-top: 24px;
+    margin-bottom: 24px;
 
     &:focus {
       outline: none;
@@ -44,8 +47,8 @@ $main-color: #000000;
     font-weight: normal;
     position: absolute;
     pointer-events: none;
-    left: 0.35rem;
-    top: 0.625rem;
+    left: 5px;
+    top: 10px;
     transition: 300ms ease all;
 
     &.shrink {
