--- a/src/Components/CollectionItem/styles.scss
+++ b/src/Components/CollectionItem/styles.scss
@@ -1,33 +1,33 @@
 .collection-item {
-  width: 22%;
-  height: 22rem;
+  width: 22.5%;
+  height: 352px;
   display: flex;
   flex-direction: column;
   align-items: center;
 
   .image {
     width: 100%;
-    height: 95%;
+    height: 100%;
     background-size: cover;
     background-position: center;
-    margin-bottom: 0.3rem;
+    margin-bottom: 4.8px;
     border: 1px solid #000;
   }
 
   .collection-footer {
     width: 100%;
-    height: 5%;
+    height: 10%;
     display: flex;
     justify-content: space-between;
-    font-size: 1.2rem;
+    font-size: 1.275rem;
 
     .name {
-      width: 92%;
-      margin-bottom: 0.3rem;
+      width: 100%;
+      margin-bottom: 4.8px;
     }
 
     .price {
-      width: 8%;
+      width: 5%;
     }
   }
 }
