update CollectionPreview component

--- a/src/Components/CollectionPreview/styles.scss
+++ b/src/Components/CollectionPreview/styles.scss
@@ -1,11 +1,11 @@
 .collection-preview {
   display: flex;
   flex-direction: column;
-  margin-bottom: 2rem;
+  margin-bottom: 24px;
 
   .title {
     font-size: 1.75rem;
-    margin-bottom: 1.65rem;
+    margin-bottom: 24px;
   }
 
   .preview {
