--- a/src/Components/SignIn/styles.scss
+++ b/src/Components/SignIn/styles.scss
@@ -1,9 +1,14 @@
 .sign-in {
-  width: 30%;
+  width: 45%;
   display: flex;
   flex-direction: column;
 
   h2 {
     margin: 10px 0;
+  }
+
+  .sign-in_buttonContainer {
+    display: flex;
+    justify-content: space-between;
   }
 }
