--- a/src/Components/Cart/styles.scss
+++ b/src/Components/Cart/styles.scss
@@ -1,4 +1,4 @@
-.cart-icon-container {
+.cart {
   width: 45px;
   height: 45px;
   position: relative;
@@ -7,12 +7,12 @@
   justify-content: center;
   cursor: pointer;
 
-  .cart-icon {
+  .cartIcon {
     width: 24px;
     height: 24px;
   }
 
-  .item-count {
+  .cart__ItemCount {
     position: absolute;
     font-size: 0.75rem;
     font-weight: bold;
