update SignIn component

--- a/src/Components/SignIn/styles.scss
+++ b/src/Components/SignIn/styles.scss
@@ -1,5 +1,5 @@
-.sign-in {
-  width: 45%;
+.signIn {
+  width: 48%;
   display: flex;
   flex-direction: column;
 
@@ -7,7 +7,7 @@
     margin: 10px 0;
   }
 
-  .sign-in_buttonContainer {
+  .signIn__ButtonContainer {
     display: flex;
     justify-content: space-between;
   }
