--- a/src/Components/DirectoryItem/styles.scss
+++ b/src/Components/DirectoryItem/styles.scss
@@ -1,4 +1,4 @@
-.menuItem {
+.directoryItem {
   min-width: 30%;
   height: 18rem;
   display: flex;
@@ -12,12 +12,12 @@
   &:hover {
     cursor: pointer;
 
-    & .menuItem__BgImage {
+    & .directoryItem__bgImage {
       transform: scale(1.2);
       transition: transform 4s cubic-bezier(0.32, 0.32, 0.32, 1);
     }
 
-    & .menuItem__Content {
+    & .directoryItem__contents {
       opacity: 0.9;
     }
   }
@@ -38,14 +38,14 @@
     margin-left: 0.5rem;
   }
 
-  .menuItem__BgImage {
+  .directoryItem__bgImage {
     width: 100%;
     height: 100%;
     background-position: center;
     background-size: cover;
   }
 
-  .menuItem__Content {
+  .directoryItem__contents {
     width: 8.2rem;
     height: 5.2rem;
     padding: 0 1.6rem;
@@ -58,14 +58,14 @@
     opacity: 0.7;
     position: absolute;
 
-    .menuItem__Title {
+    .directoryItem__title {
       font-weight: bold;
       margin-bottom: 0.4rem;
       font-size: 1.5rem;
       color: #3a3a3a;
     }
 
-    .menuItem__Subtitle {
+    .directoryItem__subtitle {
       font-weight: lighter;
     }
   }
