--- a/src/Components/ProductCard/ProductCardStyles.scss
+++ b/src/Components/ProductCard/ProductCardStyles.scss
@@ -1,19 +1,16 @@
-.product {
+.productCardContainer {
   width: 100%;
-  height: 352px;
   display: flex;
   flex-direction: column;
+  height: 350px;
   align-items: center;
   position: relative;
 
   img {
     width: 100%;
-    height: 100%;
-    background-size: cover;
+    height: 95%;
     object-fit: cover;
-    background-position: cover;
-    margin-bottom: 4.8px;
-    border: 1px solid #000;
+    margin-bottom: 5px;
   }
 
   button {
@@ -26,29 +23,29 @@
 
   &:hover {
     img {
-      opacity: 0.9;
+      opacity: 0.8;
     }
 
     button {
-      opacity: 0.8;
+      opacity: 0.85;
       display: flex;
     }
   }
 
-  .productFooter {
+  .productCardFooter {
     width: 100%;
-    height: 10%;
+    height: 5%;
     display: flex;
     justify-content: space-between;
-    font-size: 1.275rem;
+    font-size: 18px;
 
     .productName {
-      width: 100%;
-      margin-bottom: 4.8px;
+      width: 90%;
+      margin-bottom: 15px;
     }
 
     .productPrice {
-      width: 5%;
+      width: 10%;
     }
   }
 }
